--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,8 +10,8 @@
 }
 
 html {
-  font-family: var(--font-family-sans);
-  font-size: 16px;
+  font-family: var(--font-family-mono);
+  font-size: 15px;
   line-height: 1.5;
   color: var(--color-text);
   background-color: var(--color-background);
