--- a/src/components/profile/ProfileHeader.astro
+++ b/src/components/profile/ProfileHeader.astro
@@ -66,7 +66,7 @@ const location = [
                 <line x1="2" y1="12" x2="22" y2="12"></line>
                 <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
               </svg>
-              <a href={getPath(basics.url)} target="_blank" rel="noopener noreferrer" class="contact-link">{new URL(basics.url).hostname}</a>
+              <a href={basics.url} target="_blank" rel="noopener noreferrer" class="contact-link">{new URL(basics.url).hostname}</a>
             </div>
           )}
           
