--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,7 +12,7 @@ const {
   profileData,
   title, 
   description,
-  showPrintButton = false
+  showPrintButton = true
 } = Astro.props;
 
 // Usar datos dinámicos si están disponibles, o valores predeterminados si no
